// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils browser strings 1`] = `
Object {
  "browser": "chrome",
}
`;

exports[`utils browser strings 2`] = `
Object {
  "browser": "chrome",
  "os": "windows",
}
`;

exports[`utils browser strings 3`] = `
Object {
  "browser": "chrome",
  "os": "windows",
  "osVersion": "8.1",
}
`;

exports[`utils browser strings 4`] = `
Object {
  "browser": "chrome",
  "os": "windows",
  "osVersion": "8",
}
`;

exports[`utils browser strings 5`] = `
Object {
  "browser": "chrome",
  "os": "windows",
  "osVersion": "7",
}
`;

exports[`utils browser strings 6`] = `
Object {
  "browser": "chrome",
  "os": "macos",
  "osVersion": "high sierra",
}
`;

exports[`utils browser strings 7`] = `
Object {
  "browser": "firefox",
  "os": "macos",
  "osVersion": "high sierra",
}
`;

exports[`utils browser strings 8`] = `
Object {
  "browser": "firefox",
  "headless": true,
}
`;

exports[`utils browser strings 9`] = `
Object {
  "driver": "puppeteer",
  "os": "linux",
}
`;

exports[`utils browser strings 10`] = `
Object {
  "driver": "selenium",
}
`;

exports[`utils browser strings 11`] = `
Object {
  "driver": "puppeteer",
}
`;

exports[`utils browser strings 12`] = `
Object {
  "browser": "chrome",
  "browserVariant": "local",
  "browserVersion": "39",
  "os": "windows",
  "osVersion": "7",
  "provider": "browserstack",
  "window": Object {
    "height": 1024,
    "width": 1280,
  },
}
`;

exports[`utils browser strings 13`] = `
Object {
  "device": "android emulator",
  "os": "android",
  "osVersion": "8",
  "provider": "browserstack",
}
`;

exports[`utils default html compiler should work 1`] = `
Object {
  "attrs": Array [
    Object {
      "dynamic": undefined,
      "name": "id",
      "value": "\\"test\\"",
    },
  ],
  "attrsList": Array [
    Object {
      "name": "id",
      "value": "test",
    },
  ],
  "attrsMap": Object {
    "id": "test",
  },
  "children": Array [],
  "parent": undefined,
  "plain": false,
  "rawAttrsMap": Object {},
  "static": true,
  "staticInFor": false,
  "staticRoot": false,
  "tag": "div",
  "type": 1,
}
`;
